--- a/cv/education.tex
+++ b/cv/education.tex
@@ -32,8 +32,7 @@
         % \item{Got a scholarship to spend six months doing a research internship
         % at Rutgers University under supervision of Konstantin Mischaikow
         % (Jan. 2019 - Jun. 2019).}
-        \item{Supervisor: Marcio Gameiro}
-        \item{GPA: 3.83/4.00}
+        \item{Supervisor: Marcio Gameiro; FAPESP fellow; GPA: 3.83/4.00}
       \end{cvitems}
     }
 
@@ -45,8 +44,7 @@
     {Jan. 2019 - Jun. 2019}
     {
       \begin{cvitems}
-        \item{FAPESP Scholarship.}
-        \item{Supervisor: Konstantin Mischaikow.}
+        \item{Supervisor: Konstantin Mischaikow; BEPE FAPESP Scholarship}
       \end{cvitems}
     }
 
@@ -58,11 +56,9 @@
     {Apr. 2013 - Jul. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item{Got a scholarship to spend one and a half year in Germany.
-              First six months spent in a german language course.
-              The other one year was spent at RFW-Universität Bonn, Bonn, Germany
-              (Apr. 2015 - Feb. 2016) taking classes.}
-        \item{GPA: 93.93/100.00}
+        \item{Excellence scholarship to spend 1.5 years in Germany.
+              One year spent at RFW-Universität Bonn, Germany}
+        \item{GPA: 94/100}
       \end{cvitems}
     }
 %---------------------------------------------------------
