--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -13,24 +13,25 @@
 \begin{cventries}
 
   \cventry
-    {funded by MSCA - Horizon 2020}
+    {Marie Curie fellow (MSCA - Horizon 2020)}
     {PhD student at EPFL}
     {Lausanne, Switzerland} 
     {Sep. 2020 - Current} 
     {
       \begin{cvitems} 
-        \item {Developed algorithms using bulk RNA-seq and microarray to better
-               understand breast cancer and improve diagnosis.}
+        \item {Developed a novel platform (EMBER) for biomarker discovery in breast
+               cancer using bulk RNA-seq and microarray}
         \item {Developed several R packages for biostatistics and bioinformatic
-                analysis in the lab.} 
+                analysis in the lab (biogrowleR), increasing the productivity of
+                team members and standardizing several protocols} 
         \item {Used Bayesian Inference in novel ways to extract insights from 
-               data generated in the lab and elsewhere. }
-        \item {Analysed multiple transcriptomics dataset, including 
-               Bulk RNA-seq, scRNA-seq, microarray, CHiP-seq.}
+               data generated in the lab, leading to better
+               interpretation of the results}
         \item { Developed several analysis pipelines for transcriptomics
-                data that is shared in the group and used by non-bioinformaticians as well.}
-        \item {Experienced in communicating with biologists through talks and also
-               by writing reproducible reports using quarto.}
+                data that is shared in the group and used by non-bioinformaticians as well}
+        \item {Experienced in communicating with bioscientists. Paying attention to their
+                needs and helping them in clarifying their questions with biostatistics 
+                and computational biology (biogrowleR)}
       \end{cvitems} 
     }
 %-------------------------------------------------------------------------------
@@ -48,11 +49,14 @@
         \item {Academic placement to learn and understand the research 
             process in
             pharmaceutical companies. Presented my research for
-            over 70 people at both the bioscience and 
-            bioinformatics department.}
+            multiple scientists in both the bioscience and bioinformatics
+            department}
+        \item {Introduced novel ways to interpret their drug pipeline discovery platform
+                results by using bayesian inference}
       \end{cvitems} 
     }
-%-------------------------------------------------------------------------------
+    %-------------------------------------------------------------------------------
+
 \begin{cventries}
 
   \cventry
@@ -62,10 +66,10 @@
     {Jan. 2020 - August 2020} 
     {
       \begin{cvitems} 
-        \item {Studying statistical methods and how they are applied 
-            to breast cancer samples. One of the methods is 
-            Two-Tier Mapper, a topological tool to study the shape of the data.
-            Developing web-based tools for Two-Tier Mapper.}
+        \item {Improved current packaging standards in the laboratory and 
+                introduced software best practices on the way (ttmap)}
+        \item {Studied statistical methods and how they are applied
+            to answer breast cancer related questions}
       \end{cvitems} 
     }
 %-------------------------------------------------------------------------------
@@ -76,10 +80,19 @@
     {Aug. 2017 - Nov. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Applied persistent homology to understand the protein structure
-        and predict its stability;}
+        \item {Developed novel ways to predict protein stability by 
+                applying persistent homology, tools from topological
+                data analysis (TDA) and deep learning}
         \item {Combined machine learning and persistent homology to improve
-        the accuracy in image classification problems.}
+               the accuracy in image classification problems}
+        \item {Implemented TDA algorihtms in Julia (MapperMDS.jl, PersistenceImage.jl),
+               allowing researchers to speed up their computations by using a faster
+               language}
+        \item {Developed web-based tools to visualize the results of optimal cycle
+               extraction from persistent homology, helping researchers understand
+               their results (3dPD)}
+        \item {Collaboration with material science researchers to understand the
+               optimal Hansen Solubility Parameters of organic semiconductors (HSP.jl)}
       \end{cvitems}
     }
 
@@ -91,9 +104,8 @@
   {Jul. 2016 - Jul. 2017} % Date(s)
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item {Studied and implemented both stochastic and conjugate gradient
-      method, SVM, neural networks and logistic regression;}
-      \item {Applied Convolutional Neural Networks to predict LaTeX characters.}
+        \item {Applied Convolutional Neural Networks (CNNs) to predict LaTeX 
+             characters, improving the accuracy of existing algorithms}
     \end{cvitems}
   }
 
