--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -10,19 +10,17 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Mathematician doing a PhD in molecular life sciences at EPFL in Switzerland. 
-Developed machine learning algorithms for biomarker discovery with transcriptomics
+Mathematician doing a PhD in molecular life sciences in a wet lab at EPFL in Switzerland. 
+Developed statistical algorithms for biomarker discovery with transcriptomics
 data in breast cancer. 
-Experienced in transcriptomic analysis, including bulk RNA-seq, microarray
-and single-cell RNA-seq. Generated reports and pipelines using
-reproducible standards, such as quarto markdown and docker. 
-Learned and implemented biostatistical
-pipelines to analyse growth measurements data. Love to communicate and
-perform interdisciplinary work.
-
-Worked with deep learning and artificial intelligence in problems related
+Experienced in transcriptomic analysis, including single cell and bulk RNA-seq
+and microarray. Generated reports and pipelines using
+reproducible standards, such as quarto markdown, docker and shiny apps. 
+Developed novel biostatistical algorithms and
+pipelines to analyse growth measurement data from in vivo and 
+high-throughput experiments. Experienced in communicating to 
+bioscientists regarding their projects and helping them tackling their questions.
+Previously worked with deep learning and artificial intelligence in problems related
 to protein stability and computer vision.
-Besides the mentioned interests, huge fan of sports, specially table tennis and soccer.
-Always thinking what is the best approach to solve a problem.
 
 \end{cvparagraph}
