--- a/cv/teachingoutreach.tex
+++ b/cv/teachingoutreach.tex
@@ -15,11 +15,12 @@
     {Sep. 2020 - Now} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-          \item Proposed and supervised a lab immersion project for a 
-                master's student. The student worked weekly on the lab in a 
-                project involving the tool TTMap.
-          \item Participated in more than 5 conferences, going from 
-                biostatistics and bioinformatics to public outreach. 
+          \item Supervised and mentored lab immersion projects for two
+                master's students
+          \item One of the student's project led to a short paper to be 
+                published
+          \item Communicated my research in multiple conferences and 
+                visits to different labs in both academia and industry
       \end{cvitems}
     }
  
@@ -41,8 +42,8 @@
                 grant, a highly prestigious grant awarded by EU.  
           \item Started and organized a monthly bioinformatics journal club for
                 newly started PhD students from the network above.
-          \item Helped students with exercises and concepts in 
-                Numerical Analysis, a course with over 150 students.
+          \item Teaching assistant of numerical analysis, 
+                a course with over 150 students.
       \end{cvitems}
     }
 
