update cv following suggestions

--- a/cv/researchexperience.tex
+++ b/cv/researchexperience.tex
@@ -19,45 +19,50 @@
     {Sep. 2020 - Current} 
     {
       \begin{cvitems} 
-        \item {Developed a novel platform (EMBER) for biomarker discovery in breast
-               cancer using bulk RNA-seq and microarray}
+        \item {Developed a novel platform (EMBER) for biomarker discovery and breast 
+               cancer diagnosis using bulk RNA-seq and microarray. 
+               Manuscript under review}
         \item {Developed several R packages for biostatistics and bioinformatic
                 analysis in the lab (biogrowleR), increasing the productivity of
-                team members and standardizing several protocols} 
+                team members and standardizing several statistical protocols. 
+                Manuscript in preparation}
         \item {Used Bayesian Inference in novel ways to extract insights from 
                data generated in the lab, leading to better
                interpretation of the results}
         \item { Developed several analysis pipelines for transcriptomics
                 data that is shared in the group and used by non-bioinformaticians as well}
-        \item {Experienced in communicating with bioscientists. Paying attention to their
+        \item { Experienced in communicating with bioscientists. Paying attention to their
                 needs and helping them in clarifying their questions with biostatistics 
-                and computational biology (biogrowleR)}
+                and computational biology}
+        \item { Supervised and mentored master students in individual projects}
+        \item { Went to multiple conferences in different countries to present my 
+                research}
+        \item { Lead teaching assistant of genomics and bioinformatics in 2022 and 2023,
+                a class with over 100 students. Organized exercise sessions, R tutorials
+                and tutored several students in individual projects}
+        \item { Started and organized bi-weekly seminar with experts on cancer prevention}
       \end{cvitems} 
     }
+
 %-------------------------------------------------------------------------------
 
-
-\begin{cventries}
 
   \cventry
     {funded by MSCA - Horizon 2020}
     {Research intern at AstraZeneca}
     {Cambridge, UK} 
-    {Nov. 2022 - Nov. 2022} 
+    {Oct. 2022 - Dec. 2022} 
     {
       \begin{cvitems} 
-        \item {Academic placement to learn and understand the research 
-            process in
-            pharmaceutical companies. Presented my research for
-            multiple scientists in both the bioscience and bioinformatics
-            department}
+        \item {Worked in a project to extract insights in real-world data} 
+        \item {Presented my research for multiple scientists in both the
+               bioscience and bioinformatics department}
         \item {Introduced novel ways to interpret their drug pipeline discovery platform
                 results by using bayesian inference}
       \end{cvitems} 
     }
-    %-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 
-\begin{cventries}
 
   \cventry
     {funded by École polytechnique fédérale de Lausanne (EPFL)}
@@ -67,14 +72,15 @@
     {
       \begin{cvitems} 
         \item {Improved current packaging standards in the laboratory and 
-                introduced software best practices on the way (ttmap)}
-        \item {Studied statistical methods and how they are applied
-            to answer breast cancer related questions}
+                introduced software best practices (ttmap)}
       \end{cvitems} 
     }
+
+
 %-------------------------------------------------------------------------------
+
   \cventry
-    {funded by Fundação de Amparo à Pesquisa do Estado de São Paulo} % Funding agency
+    {funded by FAPESP} % Funding agency
     {Master's student} % Job title
     {São Carlos, Brazil} % Location
     {Aug. 2017 - Nov. 2020} % Date(s)
@@ -93,10 +99,13 @@
                their results (3dPD)}
         \item {Collaboration with material science researchers to understand the
                optimal Hansen Solubility Parameters of organic semiconductors (HSP.jl)}
+        \item {Awarded the best poster presentation among all master students in
+               the mathematics department at ICMC - USP 2018}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
+
 \cventry
   {funded by Programa de Atração de Jovens Talentos (CSF-PAJT)} % Funding agency
   {Undergradute researcher} % Job title
