--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{IT and Data Science}
 
 
 %-------------------------------------------------------------------------------
@@ -16,9 +16,26 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Languages} % Category
-    {Portuguese (Native), English (excellent command), 
-    German (good command), French (good command)} % Skills
+    {ember} % Category
+    {\url{https://chronchi.github.io/ember/}: Novel breast cancer
+     diagnosis tool for biomarker discovery and treatment decision} % Skills
+
+  \cvskill
+    {biogrowleR}
+    {\url{https://upbri.gitlab.io/biogrowleR/}: Tutorial, pipelines
+      and randomization algorithms for longitudinal in vivo and
+      and in vitro experiments}
+
+  \cvskill
+    {ttmap}
+    {\url{https://gitlab.com/upbri/ttmap}: R package implementing 
+        Two-Tier Mapper, a topological tool to analyse bulk RNA-Seq data}
+
+  \cvskill
+    {ProteinPersistent.jl}
+    {\url{https://github.com/chronchi/ProteinPersistent.jl}: Julia package
+      that provides functions to obtain the persistent homology of a
+      protein using the python package ripser.}
 
 %---------------------------------------------------------
 \end{cvskills}
