--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -10,17 +10,20 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Mathematician doing a PhD in molecular life sciences in a wet lab at EPFL in Switzerland. 
-Developed statistical algorithms for biomarker discovery with transcriptomics
-data in breast cancer. 
-Experienced in transcriptomic analysis, including single cell and bulk RNA-seq
-and microarray. Generated reports and pipelines using
-reproducible standards, such as quarto markdown, docker and shiny apps. 
-Developed novel biostatistical algorithms and
+Mathematician doing a PhD in molecular life sciences in a breast cancer lab at the
+Federal Polytechnic School of Lausanne (EPFL) in Switzerland. 
+Developed \textbf{statistical algorithms} for \textbf{biomarker} discovery with
+transcriptomics data in breast cancer. 
+Experienced in \textbf{transcriptomic analysis}, including single cell and bulk RNA-seq
+and microarray. I am dedicated and detail oriented, 
+using recent tools for reports and pipelines using
+reproducible standards, such as \textbf{quarto} markdown, \textbf{docker} and \textbf{shiny apps}. 
+Developed novel \textbf{biostatistical algorithms} and
 pipelines to analyse growth measurement data from in vivo and 
-high-throughput experiments. Experienced in communicating to 
-bioscientists regarding their projects and helping them tackling their questions.
-Previously worked with deep learning and artificial intelligence in problems related
+high-throughput experiments using \textbf{bayesian inference}. Experienced 
+in \textbf{communicating} with bioscientists regarding their projects
+and helping them tackling their questions.
+Previously worked with \textbf{deep learning} and \textbf{artificial intelligence} in problems related
 to protein stability and computer vision.
 
 \end{cvparagraph}
