--- a/cv.tex
+++ b/cv.tex
@@ -18,7 +18,7 @@
 % CONFIGURATIONS
 %-------------------------------------------------------------------------------
 % A4 paper size by default, use 'letterpaper' for US letter
-\documentclass[10pt, a4paper]{cls_sty/awesome-cv}
+\documentclass[11pt, letterpaper]{cls_sty/awesome-cv}
 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
@@ -95,12 +95,15 @@
 \input{cv/summary.tex}
 \input{cv/education.tex}
 \input{cv/researchexperience.tex}
-\input{cv/teachingoutreach.tex}
-\input{cv/skills.tex}
-\input{cv/papers.tex}
-\input{cv/projects.tex}
-\input{cv/events.tex}
-\input{cv/honors.tex}
+% \input{cv/teachingoutreach.tex}
+% \input{cv/skills.tex}
+\input{cv/it_ds.tex}
+\input{cv/languages.tex}
+\input{cv/hobbies.tex}
+% \input{cv/papers.tex}
+% \input{cv/projects.tex}
+% \input{cv/events.tex}
+% \input{cv/honors.tex}
 
 
 %-------------------------------------------------------------------------------
