--- a/cv/education.tex
+++ b/cv/education.tex
@@ -13,7 +13,7 @@
     {PhD in Molecular Life Sciences} % Degree
     {École Polytechnique Fédérale de Lausanne - EPFL} % Institution
     {Lausanne, VD, Switzerland} % Location
-    {Sep. 2020 - expected August 2024}
+    {Sep. 2020 - August 2024}
     {\begin{cvitems}
         \item{Supervisor: Cathrin Brisken}
         \item{Fellow of Marie Curie actions (MSCA) - Horizon 2020}
@@ -29,10 +29,10 @@
     {Aug. 2017 - Nov. 2019}
     {
       \begin{cvitems} % Description(s) bullet points
-        % \item{Got a scholarship to spend six months doing a research internship
+        % \item{Awarded an excellence scholarship to spend six months doing a research internship
         % at Rutgers University under supervision of Konstantin Mischaikow
         % (Jan. 2019 - Jun. 2019).}
-        \item{Supervisor: Marcio Gameiro; FAPESP fellow; GPA: 3.83/4.00}
+        \item{Supervisor: Marcio Gameiro; FAPESP fellow; GPA: 3.8/4.0}
       \end{cvitems}
     }
 
@@ -44,7 +44,7 @@
     {Jan. 2019 - Jun. 2019}
     {
       \begin{cvitems}
-        \item{Supervisor: Konstantin Mischaikow; BEPE FAPESP Scholarship}
+        \item{Supervisor: Konstantin Mischaikow; BEPE FAPESP Excellence Scholarship}
       \end{cvitems}
     }
 
@@ -56,9 +56,9 @@
     {Apr. 2013 - Jul. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item{Excellence scholarship to spend 1.5 years in Germany.
+        \item{Awarded an excellence scholarship to spend 1.5 years in Germany.
               One year spent at RFW-Universität Bonn, Germany}
-        \item{GPA: 94/100}
+        \item{GPA: 4/4}
       \end{cvitems}
     }
 %---------------------------------------------------------
