add papers to cv

--- a/cv.tex
+++ b/cv.tex
@@ -97,10 +97,10 @@
 \input{cv/researchexperience.tex}
 % \input{cv/teachingoutreach.tex}
 % \input{cv/skills.tex}
+\input{cv/papers.tex}
 \input{cv/it_ds.tex}
 \input{cv/languages.tex}
-\input{cv/hobbies.tex}
-% \input{cv/papers.tex}
+% \input{cv/hobbies.tex}
 % \input{cv/projects.tex}
 % \input{cv/events.tex}
 % \input{cv/honors.tex}
