--- a/cv/papers.tex
+++ b/cv/papers.tex
@@ -11,20 +11,29 @@
 
 %---------------------------------------------------------
 \cventry
-  {}
-  {2023} % Name of Project
+  {---------}
+  {2024} % Name of Project
   {}{}
   {
     \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Ronchi, C., \& Haider, S., \& Brisken C. \textbf{EMBER creates a unified space for independent breast cancer transcriptomic datasets enabling precision oncology} \textit{In review.}}
       \item {Ronchi, C., \& Ambrosini G. \& Brisken C. \textbf{biogrowleR: Extracting insights 
              from growth measurement data}. \textit{In preparation.}}
+    \end{cvitems}
+  }
+%---------------------------------------------------------
+
+\cventry
+  {---------}
+  {2023} % Name of Project
+  {}{}
+  {
+    \begin{cvitems} % Description(s) of tasks/responsibilities
       \item {Ronchi, C., \& Brisken, C. (2023). \textbf{Targeting the Progesterone Receptor 
              in Breast Cancer: Mind the Short Form!} In Clinical Cancer Research
              (pp. OF1–OF2). American Association for Cancer Research (AACR). 
              \url{https://doi.org/10.1158/1078-0432.ccr-22-3374}}
     \end{cvitems}
   }
-%---------------------------------------------------------
 
 \end{cventries}
